# public/swagger.json
@@ -10,6 +10,9 @@
 				"properties": {
 					"message": {
 						"type": "string"
+					},
+					"legs": {
+						"type": "string"
 					}
 				},
 				"required": [
@@ -30,6 +33,10 @@
 					"legs": {
 						"type": "number",
 						"format": "double"
+					},
+					"head": {
+						"type": "string",
+						"example": "Happy"
 					}
 				},
 				"required": [
@@ -38,7 +45,12 @@
 					"legs"
 				],
 				"type": "object",
-				"additionalProperties": false
+				"additionalProperties": false,
+				"example": {
+					"message": "hello world",
+					"arm": 2,
+					"legs": 99
+				}
 			}
 		},
 		"securitySchemes": {}
