# src/controllers/ping.ts
@@ -3,15 +3,23 @@ import { PingReq } from "../interface";
 
 interface PingResponse {
   message: string;
+  legs?: string;
 }
-
-
 
 @Route("ping")
 export default class PingController {
 
+  // public async getText(folderId: string, fileId: string): Promise<PingResponse> {
+  //   return {
+  //     message: "GET pong",
+  //   };
+  // }
+
   @Get("/heyknot/{folderId}")
-  public async getText(@Path() folderId: string, @Query() fileId: string): Promise<PingResponse> {
+  public async getText(
+    @Path() folderId: string
+  , @Query() fileId: string)
+  : Promise<PingResponse> {
     return {
       message: "GET pong",
     };
